# argiope

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.zig  build.zig.zon  install.ps1  install.sh  snapcraft.yaml
.github/: copilot-instructions.md
.github/agents/: zig-code-reviewer.agent.md
.github/workflows/: changelog.yml  ci.yml  docs.yml  release.yml  test-manual.yml
docs/: 404.html  _config.yml  cicd.html  guide.html  index.html  install-scripts.html  install.html  reference.html  robots.txt  script.js  sitemap.xml  styles.css
src/: cli.zig  crawler.zig  downloader.zig  html.zig  http.zig  image_browser.zig  link_checker.zig  main.rs  main.zig  mangafox.zig  report.zig  summary.zig  url.zig
